# NeoLightFX

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
example/: inputSource.cpp  main.cpp  pattern.cpp  rpi3.cpp
examples/: main.cpp  rpi3.cpp
hardware/: LEDStripController.cpp  LEDStripController.h
hardware/rpi3/: LEDStripControllerRpi3.cpp  LEDStripControllerRpi3.h
hardware/script/: remote_deployBuildRun.ps1
include/: Debug.h  Effects.h  FrameProcessor.h  ImageProcessor.h  LEDColorController.h  LEDStripController.h  RenderManager.h  StaticColor.h  VideoController.h
include/controllers/: EffectController.h  HardwareController.h  InputSourceController.h  LEDColorController.h  SimulationController.h  VisualController.h
include/hardware/: LEDStripConfig.h  LEDStripController.h
include/hardware/rpi3/: LEDStripControllerRpi3.h
include/pattern/: Pattern.h
include/processors/: ImageProcessor.h
include/rpi3/: LEDStripControllerRpi3.h
include/sources/: CaptureSource.h  FrameSource.h  ImageSource.h  VideoSource.h
include/utils/: EnumToString.h  SimulationUtils.h  color_processing_utils.h  mode_utils.h  percision_timer.h  platform_detection.h  timer_utils.h
main/: main.cpp  main_hardware.cpp
rpi3/: LEDStripControllerRpi3.cpp  LEDStripControllerRpi3.h
script/: remote_deployBuildRun.ps1
simulation/: led_simulation.cpp
src/: Debug.cpp  Effects.cpp  FrameProcessor.cpp  ImageProcessor.cpp  LEDColorController.cpp  RenderManager.cpp  StaticColor.cpp  VideoController.cpp
src/controllers/: EffectController.cpp  HardwareController.cpp  InputSourceController.cpp  LEDColorController.cpp  SimulationController.cpp
src/hardware/remote_control/: inputProcessing.cpp  ir.cpp  ir1.cpp  ir2.py  ir2_main.py  ir3.py  ir_main.py  ir_test.py
src/hardware/rpi3/: LEDStripControllerRpi3.cpp
src/processors/: ImageProcessor.cpp
src/sources/: CaptureSource.cpp  ImageSource.cpp  VideoSource.cpp
src/utils/: Debug.cpp  EnumToString.cpp  SimulationUtils.cpp  color_processing_utils.cpp  mode_utils.cpp  percision_timer.cpp  platform_detection.cpp  timer_utils.cpp
